--- a/naverai_boot/src/main/resources/application.properties
+++ b/naverai_boot/src/main/resources/application.properties
@@ -5,3 +5,18 @@ server.port = 8064
 #servlet, jsp, jstl 라이브러리 pom.xml 추가
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#db연결정보
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/empdb
+spring.datasource.username=emp
+spring.datasource.password=emp
+
+
+#config파일위치
+#chatbot.PizzaDTO --> pizza(mybatis-config.xml)
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+
+#mapper파일위치
+#insert ---> sql-mapping.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/pizza-mapping.xml
